@@ -1,0 +1,8 @@
+list(APPEND PAL_FORWARDING_HEADERS_DIRECTORIES
+)
+
+if (${USE_DIRECT2D})
+else ()
+    list(APPEND PAL_FORWARDING_HEADERS_DIRECTORIES
+    )
+endif ()
