@@ -1,3 +1,14 @@
+2017-08-01  Yoshiaki Jitsukawa  <jitsu@rd.scei.sony.co.jp>
+
+        [PAL][Win] Copy forwarding headers
+        https://bugs.webkit.org/show_bug.cgi?id=175012
+
+        Reviewed by Myles C. Maxfield.
+
+        * pal/PlatformAppleWin.cmake: Added.
+        * pal/PlatformWin.cmake:
+        * pal/PlatformWinCairo.cmake: Added.
+
 2017-07-26  Brian Burg  <bburg@apple.com>
 
         Remove WEB_TIMING feature flag
